# mara-superset

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  LICENSE  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: build.yaml
.scripts/: superset.mk
docs/: api.rst  conf.py  config.rst  index.rst  installation.rst  requirements.txt  sync.rst
mara_superset/: __init__.py  cli.py  client.py  config.py  metadata.py  views.py
mara_superset/.scripts/: README.md  superset.mk
