[metadata]
name = mara-superset
version = attr: mara_superset.__version__
url = https://github.com/mara/mara-superset
description = Configuring Apache Superset from a Mara Schema
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
packages = mara_superset
python_requires = >= 3.6
install_requires =
    mara-db>=4.7.1
    mara-page>=1.3.0
    mara_schema>=1.0.0
    click
    requests

[options.extras_require]
dev = apache-superset>=1.3.2

[options.package_data]
mara_superset = .scripts/*
